--- a/Aryanwork/styles.css
+++ b/Aryanwork/styles.css
@@ -2,11 +2,6 @@
     padding: 0;
     margin: 0;
 }
-body{
-    margin: 0;
-    padding: 0;
-}
-
 
 header{
     background-color:rgb(255, 39, 104) ;
@@ -43,6 +38,7 @@ header{
 .logo h2{
     margin-top: 15px;
     color: rgb(255, 41, 105);
+    font-family: outfit;
 }
 
 .mainhead{
@@ -71,11 +67,6 @@ header{
     text-align: center;
 
     
-}
-
-.links ul li a{
-    text-decoration: none;
-    color: black;
 }
 
 .fa-solid{
@@ -121,7 +112,7 @@ header{
     fill: #9e9ea7;
     width: 1rem;
     height: 1rem;
-   }
+}
 
 .headerlinks ul{
     display: flex;
@@ -134,11 +125,6 @@ header{
     margin: 0px 30px;
     padding: 5px;
     color: #6d6d6d;
-}
-
-.headerlinks ul li a{
-    text-decoration: none;
-    color:#6d6d6d ;
 }
    
 
@@ -331,8 +317,7 @@ header{
     aspect-ratio:30/9 ;
     object-fit: cover;
 }
-   
-   
+
 .mimg1{
     display: flex;
 }
@@ -347,91 +332,207 @@ header{
     
 }
 
-.contimgs{
-    display: flex;
+/*ARYAN*/
+
+.cell-1 p{
+    font-size: 30px;
+    text-align: center;
+}
+.cell-1 a{
+    text-decoration: none;
+}
+.cell-1 img{
+    height:35%;
+    width: 35%;
+}
+
+.cell-2-box{
+    display:flex;
+    flex-wrap:wrap;
+    gap: 15px;
+    justify-content: center;
+}
+.cell-2-box a{
+    display: block;
+    width: 35%;
+}
+.cell-2 p{
+    font-size:30px;
+    text-align: center;
+}
+.cell-2-box img{
+    width: 100%;
+    height:auto;
+    object-fit:cover;
+}
+
+.cell-3{
+    padding-top: 40px;
+    padding-bottom: 30px;
+    display:flex;
+    justify-content: center;
     align-items: center;
+}
+.cell-3 a{
+    width: 49%;
+    display: block;
+    text-decoration: none;
+}
+.cell-3 img{
+    width:100%;
+    object-fit:cover;
+    height: auto;
+    display: block;
+}
+
+.cell-4{
+    padding-bottom: 30px;
+}
+.cell-4 img{
+    object-fit: cover;
+    height:auto;
+    width:100%;
+}
+
+.cell-5{
+    display:flex;
     justify-content: center;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
 }
-
-.sp{
-    margin-top: -7px;
-}
-
-.cf1 img {
-    width: 80%;
+.cell-5 img{
     height: auto;
-    object-fit: cover;
-}
-
-.cfimg1 img{
     width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-.cfimg2 img{
-    width: 100%;
-    height: auto;
     object-fit: cover;
 }
 
-.onlycont1{
-    display: flex;
+.cell-5-row{
+    display:flex;
     justify-content: center;
+    align-items: center;
 }
 
-.onlycont img{
+.cell-5-row a{
+    display: block;
+    width: 24.4%;
+    height: 300px;
+}
+
+.cell-5-row img{
+    height: 300px;
     width: 100%;
-    height: auto;
-    object-fit: cover;
+    display: block;
 }
 
-.singleimg{
-    display: flex;
+.scroll-title p{
+    font-size: 30px;
+    text-align: center;
+    padding-top:30px;
+}
+.cell-6 p{
+    font-size:30px;
+    text-align: center;
+}
+.cell-6 img{
+    height: 39%;
+    width: 39%;
+    padding: 5px;
+    padding-bottom:30px;
+}
+
+.image-row{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap:20px;
+    padding:20px;
+}
+
+.image-row-items{
+    width: 300px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor:pointer;
+}
+
+.image-row-items img{
+    width: 100%;
+    border-radius: 10px;
+    transition: transform 0.3s ease,box-shadow 0.3s ease;
+}
+.image-row-items:hover img{
+    transform: scale(1.1);
+    }
+.image-row-items:hover{
+    transform: translateY(-5px);
+}
+
+.cell-7-box{
+    display:flex;
+    flex-wrap:wrap;
+    gap: 10px;
     justify-content: center;
+    width:89%;
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
-.famcont{
-    display: flex;
+.cell-7-box a{
+    display:block;
+    width: 49%;
+    height: auto;
+}
+.cell-7-box img{
     width: 100%;
+    height:auto;
+    display:block;
+}
+
+.cell-8 p{
+    font-size: 30px;
+    text-align: center;
+}
+
+.cell-8 img{
+    padding:8px;
+    height:35%;
+    width: 35%;
+}
+
+.cell-9{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    padding:30px;
+}
+
+.cell-9 img{
+    height: 40%;
+    width: 100%;
+}
+
+
+.cell-10 {
+    display: flex;
     justify-content: space-between;
-    
-
 }
-
-.cf1img img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.cell-10-img{
+    flex:1;
+    height: 300px;
+    width: 200px;
 }
-.c1 img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-section{
-    margin: 0;
-    padding: 0;
-}
-
-.firsuc{
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.firstd img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-
-.success img{
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-}
-/* 
-.item{
+.cell-10-box{
+    flex:1;
+    height: 300px;
     width: 100px;
-    height: 100px;
-} */
+}
+
+.fa-chevron-left{
+    position: relative;
+    left:-48vw;
+}
+.fa-chevron-right{
+    position: relative;
+    left:48vw;
+}
